# generalized_gaussian_quadrature

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: compressor.hpp  damped_gauss_newton.hpp  discretizer.hpp  evaluator.hpp  function_handler.hpp  function_handler_python.hpp  ggq.hpp  interpolator.hpp  interval_divider.hpp  optimizer.hpp  utils.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  discretizer.cpp  function_handler.cpp  ggq.cpp  ggq_python_wrapper.cpp
temp/: .working_wrapper.cpp.swp  working_python.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test_discretizer.cpp  test_ggq.cpp  test_interval_divider.cpp
test/performance_tests/: discretizer_performance.cpp
test/unit_tests/: test_compressor.cpp  test_compressors.cpp  test_damped_gauss_newton.cpp  test_discretizer.cpp  test_evaluator.cpp  test_function_handler.cpp  test_ggq.cpp  test_interpolator.cpp  test_interval_divider.cpp  test_optimizer.cpp
